# libmorton

./: .clang-format  .gitignore  .travis.yml  Dockerfile  Makefile.am  README.md  autogen.sh  binlit.h  build.sh  circle.yml  configure.ac  libmorton.pc.in  morton.c  morton.h  morton.pc.in  test_morton.c  util.c  util.h  wercker.yml
test/: binlit.c  iface.c  impl.c  util.c
